# Kiban

./: Cargo.toml  README.md  REFERENCE.md  grammar.md
ast/: Cargo.toml
ast/src/: body.rs  closure.rs  generic.rs  lib.rs  node.rs  statement.rs
ast/src/expression/: binary.rs  mod.rs  range.rs  unary.rs
ast/src/expression/operator/: binary.rs  mod.rs  unary.rs
ast/src/item/: identified.rs  import.rs  mod.rs
ast/src/literal/: mod.rs
ast/src/types/: mod.rs
commons/: Cargo.toml
commons/src/: lib.rs  location.rs  parser.rs  span.rs  types.rs
error/: Cargo.toml
error/src/: lib.rs  linting.rs
language/: Cargo.toml
language/src/: lib.rs
language/src/parser/: grammar.rs  mod.rs
lexer/: Cargo.toml
lexer/lexer_derive/: Cargo.toml
lexer/lexer_derive/src/: lib.rs
lexer/src/: comment.rs  input.rs  keyword.rs  lib.rs  literal.rs  operator.rs  punctuation.rs  types.rs
src/: lib.rs  main.rs  module.rs
syntax/: Cargo.toml
syntax/src/: atom.rs  body.rs  const.rs  impl.rs  item.rs  lib.rs  lit.rs  literal.rs  node.rs  stmt.rs  sugar.rs  type.rs
syntax/src/expr/: binary.rs  mod.rs  range.rs  unary.rs
