[package]
name = "Kiban"
description = "A language 🔡"
version = "0.0.1"
edition = "2021"

[dependencies]
kiban_commons = { path = "./commons" }
kiban_syntax = { path = "./syntax" }
kiban_lexer = { path = "./lexer" }
kiban_error = { path = "./error" }

derive_more = "0.99"
getset = "0.1.2"
clap = { version = "4.1", features = ["string"]}
miette = { version = "5.5", features = ["fancy"] }

[workspace]
members = ["commons", "syntax", "lexer", "error"]
