[package]
name = "kiban_ast"
description = "Kiban's AST 💫"
version = "0.0.1"
edition = "2021"

[dependencies]
kiban_commons = { path = "../commons" }
kiban_lexer = { path = "../lexer" }
kiban_error = { path = "../error" }
compact_str = "0.7"
paste = "1.0"
derive_more = "0.99"
getset = "0.1"
nom = "7.1"
nom_locate = "4.1"
nom-recursive = { git = "https://github.com/nv0skar/nom_recursive_without_pointers", features = ["tracer256"] }
miette = "5.5"
