[package]
name = "kiban_lexer"
description = "Kiban's lexer 🪨"
version = "0.0.1"
edition = "2021"

[features]
default = ["parallel"]
parallel = []

[dependencies]
kiban_commons = { path = "../commons" }
kiban_error = { path = "../error" }
kiban_lexer_derive = { path = "./lexer_derive" }
rayon = "1.7"
smallvec = "1.10"
compact_str = "0.7"
derive_more = "0.99"
getset = "0.1"
paste = "1.0"
nom = "7.1"
nom-recursive = { git = "https://github.com/nv0skar/nom_recursive_without_pointers" }
miette = "5.5"