[package]
name = "kiban_syntax"
description = "Kiban's Syntax Tree 💫"
version = "0.0.1"
edition = "2021"

[dependencies]
kiban_commons = { path = "../commons" }
kiban_lexer = { path = "../lexer" }
kiban_error = { path = "../error" }
rclite = "0.2"
compact_str = "0.7"
paste = "1.0"
derive_more = "0.99"
getset = "0.1"
